# LearnVcodec

./: .gitignore  .gitmodules  ReadMe.md  subrepo.sh
av1/: ReadMe.md
avs2/: ReadMe.md
avs2/RD17.0/: README.txt
ffmpeg/: 1.1.ffmpeg_build.md  1.2.ffmpeg_build_framework.md  1.ffmpeg_build.md  2.ffmpeg_app.md  3.ffmpeg_framework.md  doc.md
h264/: ReadMe.md
h265/: ReadMe.md
jpeg/: ReadMe.md
mini_tools/1.opencma/: opencma.cpp  opencma.py
mini_tools/v4l2/: readMe.md
net_stream/: ReadMe.md
tmp/ffmpeg/: ReadMe  Simplest-FFmpeg-Video-Encoder.c  compile.sh  ffmpeg_opencv.cpp  installtest.c  installtest.cpp  installtest2.c  pull.cpp  push.cpp  rtmp_stream.c  rtmp_stream1.c  simplest_ffmpeg_player.c
tmp/gsoap/: ReadMe
tmp/gsoap/demo/: ReadMe
tmp/gsoap/demo/source/: addtest.c
tmp/gsoap/demo2/: ReadMe
tmp/gsoap/demo2/buildC/: calc.h  calcclient  calcclient.c  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapStub.h
tmp/gsoap/demo2/buildCXX/: calc.h  calcclient  soapC.cpp  soapH.h  soapStub.h  soapcalcProxy.cpp  soapcalcProxy.h
tmp/gsoap/demo2/source/: calcclient.cpp
tmp/gsoap/onvif/: ReadMe
tmp/gsoap/onvif/wsdlFile/: rules.xsd
tmp/gsoap/onvif2/: ReadMe
tmp/gsoap/onvif2/mobileCode/: main  main.c  soapC.c  soapClient.c  soapH.h  soapStub.h
tmp/gsoap/onvif2/onvifDemo/1.geneFramework/1.beforeDelete/: onvif.h
tmp/gsoap/onvif2/onvifDemo/2.searchDevice/method1/: a.out  main.cpp
tmp/gsoap/onvif2/onvifDemo/2.searchDevice/method2/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/2.searchDevice/method2/comm/: onvif_dump.c
tmp/gsoap/onvif2/onvifDemo/3.getDeviceInfo/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/3.getDeviceInfo/comm/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/3.getDeviceInfo/deviceinfo/: main.c
tmp/gsoap/onvif2/onvifDemo/3.getDeviceInfo/discovery/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/4.all/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/4.all/avstream/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/4.all/capabilities/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/4.all/deviceinfo/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/4.all/discovery/: compile.sh
tmp/gsoap/onvif2/onvifDemo/4.all/systemtime/: main.c
tmp/gsoap/onvif2/onvifDemo/5.all_withOpencv/: CMakeLists.txt
tmp/gsoap/onvif2/onvifDemo/5.all_withOpencv/SetResolution/: CMakeLists.txt  main.c
tmp/gsoap/onvif2/onvifDemo/5.all_withOpencv/avstream/: main.cpp
tmp/gsoap/onvif2/onvifDemo/5.all_withOpencv/snapshot/: CMakeLists.txt  main.c
tmp/gsoap/onvif2/onvifDemo/5.all_withOpencv/systemtime/: CMakeLists.txt
tmp/live555/: ReadMe
tmp/rtp-jrtplib/: ReadMe
tmp/sdl/: Makefile  ReadMe.md  sdl1_demo.cpp  sdl2_demo.cpp  sdl2_demo2.cpp  sdl2_demo3.cpp
tmp/webCam/base/: main.cpp  webCam
tmp/webCam/calibrate/: main.cpp  webCali
tmp/webCam/calibrate/old/: web_cali_old.cpp
tools/: build_run.sh  subrepo.sh
vp9/: ReadMe.md
